fix: drop downs flex grow

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
     <header>
         <div id="icon">
-            <p class="icon"></p>
-            <p class="icon"></p>
-            <p class="icon"></p>
+            <div class="icon"></div>
+            <div class="icon"></div>
+            <div class="icon"></div>
         </div>
         <h1>Coding Bootcamps Europe</h1>
     </header>
@@ -39,7 +39,7 @@
                 </label>
             </form>
             <div class="forms">
-                <form><select class="class">
+                <form class="select-container"><select class="class">
                         <option>NovemberClass2021</option>
                     </select>
                     <div class="arrow"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
@@ -48,7 +48,7 @@
                                 d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
                         </svg></div>
                 </form>
-                <form><select class="time">
+                <form class="select-container"><select class="time">
                         <option>Full-time</option>
                         <option>Part-time</option>
                     </select>
